--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:1632/postgres
 spring.datasource.username=application
 spring.datasource.password=application
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix= .ftl
